# pycrypto

./: .gitignore  Makefile  README.md  Viikorapotti.md  Viikorapotti_1.md  aes.py  aihe.md  cruft.py  decrypt.py  encrypt.py  gen_rsa.py  iso_avain  iso_avain.pub  korjaa.py  maarittely.md  pylintrc  pyproject.toml  rsa.py  test_rsa.py
docs/: Kayttoohje.md  Loppuraportti.md  MaarittelyDokumentti.md  TestausDokumentti.md  ToteutusDokumentti.md  Viikorapotti.md  aihe.md  coverage_20211206.md  coverage_20211231.txt  demo.txt  rsa_lasku.txt
