[tool.poetry]
name = "pycrypto"
version = "0.1.0"
description = "RSA encryption with Python 3"
authors = ["Bo Granlund <bgran@havoc.fi>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
python-jose-cryptodome = "^1.3.2"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
